log
Sun 08 Oct 2023 11:08:46 PM UTC: 
 tests:  0|5
total_score: 0/70
066d536
Sun 08 Oct 2023 11:13:43 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   59 |       list=append(list, adj_node);
      |            ^~~~~~
sudoku.c:59:11: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   59 |       list=append(list, adj_node);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
dbc2f8c
Sun 08 Oct 2023 11:22:17 PM UTC: 
 sudoku.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:14: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   72 |       list = append(list, adj_node);
      |              ^~~~~~
sudoku.c:72:12: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   72 |       list = append(list, adj_node);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
ebc68db
Sun 08 Oct 2023 11:24:33 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:14: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   75 |       list = append(list, adj_node);
      |              ^~~~~~
sudoku.c:75:12: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   75 |       list = append(list, adj_node);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
f3c946e
Sun 08 Oct 2023 11:38:26 PM UTC: 
 sudoku.c | 32 +++++++++++++++++---------------
 1 file changed, 17 insertions(+), 15 deletions(-)
 tests:  0|5
total_score: 0/70
fc78ff5
Sun 08 Oct 2023 11:52:04 PM UTC: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  3|4
total_score: 20/70
c455007
Mon 09 Oct 2023 12:04:38 AM UTC: 
 sudoku.c | 36 +++++++++++++++++++-----------------
 1 file changed, 19 insertions(+), 17 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:104:12: error: expected ‘;’ before ‘:’ token
  104 |       break:
      |            ^
      |            ;
Compilation failed
c455007
Mon 09 Oct 2023 12:04:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:113:19: error: array subscript -1 is below array bounds of ‘int[9][9]’ [-Werror=array-bounds]
  113 |     adj_node->sudo[fil][col]=num;
      |     ~~~~~~~~~~~~~~^~~~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
7a89505
Mon 09 Oct 2023 12:07:34 AM UTC: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:113:19: error: array subscript -1 is below array bounds of ‘int[9][9]’ [-Werror=array-bounds]
  113 |     adj_node->sudo[copia_fila][copia_columna] = num;
      |     ~~~~~~~~~~~~~~^~~~~~~~~~~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
f481a40
Mon 09 Oct 2023 12:09:08 AM UTC: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:99:9: error: ‘copia_columna’ undeclared (first use in this function)
   99 |         copia_columna=columna;
      |         ^~~~~~~~~~~~~
sudoku.c:99:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8b3abcd
Mon 09 Oct 2023 12:09:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
98c37f2
Mon 09 Oct 2023 12:15:22 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:127:24: error: ‘coljumna’ undeclared (first use in this function); did you mean ‘columna’?
  127 |       if(n->sudo[fila][coljumna]){
      |                        ^~~~~~~~
      |                        columna
sudoku.c:127:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e35fa75
Mon 09 Oct 2023 12:15:30 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ce806f8
Mon 09 Oct 2023 12:15:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
e9d1be5
Mon 09 Oct 2023 12:26:43 AM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:36: error: expected ‘)’ before ‘;’ token
  140 |     Node* current=(Node*)last(stack;
      |                                    ^
      |                                    )
sudoku.c:176:3: error: expected ‘,’ or ‘;’ before ‘}’ token
  176 |   }
      |   ^
sudoku.c:140:11: error: unused variable ‘current’ [-Werror=unused-variable]
  140 |     Node* current=(Node*)last(stack;
      |           ^~~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262: error: control reaches end of non-void function [-Werror=return-type]
  262 | }
      | 
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc74afe
Mon 09 Oct 2023 12:28:56 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
83834cb
Mon 09 Oct 2023 12:30:41 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:183:5: note: previous definition of ‘main’ was here
  183 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
83f7b76
Mon 09 Oct 2023 12:31:11 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
a627091
Mon 09 Oct 2023 12:43:35 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
b164eef
Mon 09 Oct 2023 12:43:56 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c6811d2
